changin colors and adding font

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -35,6 +35,7 @@
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold"
+            android:fontFamily="@font/news_font"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_source"
