--- a/app/src/main/res/layout/layout_wishilst.xml
+++ b/app/src/main/res/layout/layout_wishilst.xml
@@ -52,6 +52,7 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/news_font"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/card_view"
         app:layout_constraintTop_toTopOf="@+id/card_view"
