--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#cb0002</color>
     <color name="grayLight">#ECEFF1</color>
+    <color name="news_title">#ECEFF1</color>
 </resources>
