--- a/app/src/main/res/layout/layout_second.xml
+++ b/app/src/main/res/layout/layout_second.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:ellipsize="end"
         android:maxLength="100"
@@ -19,11 +20,12 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:fontFamily="news_font"
         app:layout_constraintEnd_toStartOf="@id/ib_share"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Business is booming for nonprofit bike shop all around the Business is booming for nonprofit bi" />
-
 
     <View
         android:id="@+id/view"
