--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,15 +4,15 @@
     <item
         android:id="@+id/ic_home"
         android:icon="@drawable/ic_baseline_home"
-        android:title="" />
+        android:title="@string/title_base" />
 
     <item
         android:id="@+id/ic_favourite"
         android:icon="@drawable/ic_baseline_bookmark_nav"
-        android:title="" />
+        android:title="@string/title_saved" />
 
     <item
         android:id="@+id/ic_setting"
         android:icon="@drawable/ic_baseline_settings"
-        android:title="" />
+        android:title="@string/title_settings" />
 </menu>
