adding the perfect theme light/dark mode

--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="2"
+        tools:itemCount="6"
         tools:listitem="@layout/layout_wishilst" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -24,7 +24,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:contentDescription="@string/delete_all"
-        app:backgroundTint="@color/red"
+        app:backgroundTint="@color/errorDelete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_baseline_delete_floating"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_saved_articles"
-        android:textColor="@color/black"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:textSize="25sp"
         android:textStyle="bold"
         android:visibility="gone"
