--- a/app/src/main/res/drawable/ic_baseline_share.xml
+++ b/app/src/main/res/drawable/ic_baseline_share.xml
@@ -2,7 +2,7 @@
     android:width="20dp"
     android:height="20dp"
     android:alpha=".5"
-    android:tint="@color/black"
+    android:tint="@color/lightGray"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
