--- a/app/src/main/res/drawable/splash_image_dark.xml
+++ b/app/src/main/res/drawable/splash_image_dark.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/white" />
+    <item android:drawable="@color/back_ground_dark" />
+
     <item>
         <bitmap
             android:gravity="center"
