--- a/app/src/main/res/drawable/square.xml
+++ b/app/src/main/res/drawable/square.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <gradient android:startColor="@color/grayLight" />
+            <gradient android:startColor="@color/black" />
         </shape>
 
     </item>
