--- a/app/src/main/res/layout/layout_home.xml
+++ b/app/src/main/res/layout/layout_home.xml
@@ -16,7 +16,7 @@
         android:ellipsize="end"
         android:maxLength="60"
         android:maxLines="3"
-        android:textColor="@color/black"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:textSize="18sp"
         android:textStyle="bold"
         android:fontFamily="news_font"
@@ -55,7 +55,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/grayLight"
+        android:background="@color/lightGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_source" />
