--- a/app/src/main/res/layout/layout_second.xml
+++ b/app/src/main/res/layout/layout_second.xml
@@ -17,7 +17,7 @@
         android:ellipsize="end"
         android:maxLength="100"
         android:maxLines="3"
-        android:textColor="@color/black"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:textSize="18sp"
         android:textStyle="bold"
         android:fontFamily="news_font"
@@ -34,7 +34,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/grayLight"
+        android:background="@color/lightGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
