--- a/app/src/main/res/layout/layout_wishilst.xml
+++ b/app/src/main/res/layout/layout_wishilst.xml
@@ -49,10 +49,9 @@
         android:layout_marginEnd="24dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/black"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:fontFamily="@font/news_font"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/card_view"
         app:layout_constraintTop_toTopOf="@+id/card_view"
@@ -110,7 +109,7 @@
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_marginTop="16dp"
-        android:background="@color/grayLight"
+        android:background="@color/lightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
